css/summary.css
.h5p-summary .summary-content .summary-container > ul {
  margin: 0;
  padding: 0;
  display: block;
}

.h5p-summary .summary-container {
  margin: var(--h5p-theme-spacing-s) 0;
  background-color: var(--h5p-theme-ui-base);
}

.h5p-summary .summary-container.has-results {
  border: 1px solid var(--h5p-theme-feedback-correct-third);
  border-radius: var(--h5p-theme-border-radius-small);
  margin-bottom: var(--h5p-theme-spacing-m);
}

.h5p-summary .summary-options {
  height: auto;
  padding: 0;
  margin: var(--h5p-theme-spacing-s) 0 var(--h5p-theme-spacing-m) 0;
}
.h5p-summary .summary-options ul.h5p-panel {
  display: none;
  padding: 0;
  margin: 0;
}

.h5p-summary .summary-options ul.h5p-panel.panel-disabled {
  pointer-events: none;
}

.h5p-summary .summary-evaluation {
  overflow: hidden; /* Contain floated counters within the evaluation div */
  margin: var(--h5p-theme-spacing-s) 0;
}


.h5p-summary .summary-evaluation-content {
  display: block;
  position: relative;
  float: left;
  padding: calc(var(--h5p-theme-spacing-s)*0.1) var(--h5p-theme-spacing-l) calc(var(--h5p-theme-spacing-s)*0.1) 0;
  font-size: var(--h5p-theme-font-size-xl);
  color: var(--h5p-theme-text-primary);
  font-weight: 600;
  @media (max-width: 576px) {
     width: 100%;
     margin-bottom: var(--h5p-theme-spacing-s);
     box-sizing: border-box;
  } 
}

.h5p-summary .summary-evaluation-content > p {
  margin: 0;
}

.h5p-summary .summary-container li,
.h5p-summary .summary-options li {
  list-style: none;
  background-color: var(--h5p-theme-alternative-base);
  -moz-border-radius: var(--h5p-theme-border-radius-medium);
  -webkit-border-radius: var(--h5p-theme-border-radius-medium);
  border-radius: var(--h5p-theme-border-radius-medium);
  border: 1px solid var(--h5p-theme-feedback-correct-third);
  color: var(--h5p-theme-text-primary);
  font-size: var(--h5p-theme-font-size-m);
  line-height: normal;
  font-weight: 600;
  padding: var(--h5p-theme-spacing-xs) var(--h5p-theme-spacing-s);
  text-decoration: none;
  margin: 0;
  margin: var(--h5p-theme-spacing-xxs) 0;
}

.h5p-summary .summary-content li > p {
  margin: calc(var(--h5p-theme-spacing-m)*0.4) 0 0 0;
  padding: 0;
}
.h5p-summary .summary-content li > p:first-child {
  margin: 0;
}
.h5p-summary .summary-container li:not(:last-child) {
  border-bottom: 1px solid var(--h5p-theme-feedback-correct-third);
  border-radius: 0;
}
.h5p-summary .summary-container li {
  display: none;
  z-index: 5;
  margin: 0;
  border: 0;
  color: var(--h5p-theme-feedback-correct-main);
  background: var(--h5p-theme-feedback-correct-secondary);
 
  filter: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;

  -webkit-transition: background-color 1000ms linear;
  -moz-transition: background-color 1000ms linear;
  -o-transition: background-color 1000ms linear;
  -ms-transition: background-color 1000ms linear;
  transition: background-color 1000ms linear;
}
.h5p-summary .summary-container li:before {
  text-decoration: none;
  content: "\e903";
  font-family: 'h5p-theme';
  color: var(--h5p-theme-feedback-correct-main);
  float: right;
}


.h5p-summary .h5p-panel:not(.panel-disabled) .summary-claim-unclicked{
    display: flex;
    align-items: center;
    padding: var(--h5p-theme-spacing-xs) var(--h5p-theme-spacing-s);
      margin: var(--h5p-theme-spacing-xxs) 0;
    background: var(--h5p-theme-alternative-base);
    border-radius: var(--h5p-theme-border-radius-medium);
    border: 1px solid var(--h5p-theme-alternative-base);
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    text-align: left;
    font-weight: 600;
    color: var(--h5p-theme-text-secondary);
}
.h5p-summary .h5p-panel:not(.panel-disabled) .summary-claim-unclicked:hover {
  cursor: pointer;
  filter: none;
  border-color: transparent;
  background-color: var(--h5p-theme-alternative-dark);
}
.h5p-summary .h5p-panel:not(.panel-disabled) .summary-claim-unclicked:focus,
.h5p-summary li.summary-failed:focus{
  outline: 4px ridge var(--h5p-theme-main-cta-base);
  border-radius: 4px;
}

.h5p-summary li.summary-failed > p,
.h5p-summary li.summary-failed {
  color: var(--h5p-theme-feedback-incorrect-main);
  background: var(--h5p-theme-feedback-incorrect-secondary);
  font-weight: bold;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
.h5p-summary li.summary-failed{
  border: solid 1px var(--h5p-theme-feedback-incorrect-third);
}

.h5p-summary li.summary-failed:before {
  text-decoration: none;
  content: "\e902";
  font-family: 'h5p-theme';
  color: var(--h5p-theme-feedback-incorrect-main);
  float: right;
  line-height: 1.25;
}

.h5p-summary .summary-options div {
  font-size: var(--h5p-theme-font-size-m);
  padding:0;
  background-repeat: no-repeat;
  background-position: top right;
}

.h5p-summary .summary-score {
  float: right;
  color: var(--h5p-theme-feedback-incorrect-main);
  background: var(--h5p-theme-feedback-incorrect-secondary);
  -moz-border-radius: var(--h5p-theme-border-radius-small);
  border: solid 1px var(--h5p-theme-feedback-incorrect-third);
  -webkit-border-radius: var(--h5p-theme-border-radius-small);
  border-radius: var(--h5p-theme-border-radius-small);
  padding: calc(var(--h5p-theme-spacing-l)*0.2) calc(var(--h5p-theme-spacing-l)*0.45);
  font-weight: 600;
  font-size: var(--h5p-theme-font-size-m);
  margin-left: calc(var(--h5p-theme-spacing-l)* 0.3);
  @media (max-width: 576px) {
    width: 100%;
    margin-bottom: var(--h5p-theme-spacing-s);
    box-sizing: border-box;
  } 
}

.h5p-summary .summary-score:not(.visible) {
  display: none;
}

.h5p-summary .summary-score:before {
  text-decoration: none;
  content: "\e902";
  font-family: 'h5p-theme';
  color: var(--h5p-theme-feedback-incorrect-main);
  float: left;
  margin-right: calc(var(--h5p-theme-spacing-s)*0.3);
  top: calc(var(--h5p-theme-spacing-s)*0.1);
}

.h5p-summary .summary-progress {
  width: 0;
  height: 0;
  overflow: hidden;
  left: 0;
  position: absolute;
}

.h5p-summary .summary-progress-numeric {
  float: right;
  background-color: var(--h5p-theme-feedback-correct-secondary);
  border: 1px solid var(--h5p-theme-feedback-correct-third);
  -moz-border-radius: var(--h5p-theme-border-radius-medium);
  -webkit-border-radius: var(--h5p-theme-border-radius-medium);
  border-radius: var(--h5p-theme-border-radius-medium);
  padding: calc(var(--h5p-theme-spacing-l)*0.2) calc(var(--h5p-theme-spacing-l)*0.45);
  font-weight: 600;
  color: var(--h5p-theme-feedback-correct-main);
  margin-left: calc(var(--h5p-theme-spacing-l)*0.3);
  font-size: var(--h5p-theme-font-size-m);
   font-weight: 600;
    @media (max-width: 576px) {
      width: 100%;
      box-sizing: border-box;
  } 
}

.h5p-summary .summary-progress-numeric:before {
  text-decoration: none;
  content: "\e903";
  font-family: 'h5p-theme';
  color: var(--h5p-theme-feedback-correct-main);
  float: left;
  margin-right: calc(var(--h5p-theme-spacing-s)*0.3);
}

.h5p-summary .summary-options h2 {
  font-size: var(--h5p-theme-font-size-xl);
  font-weight: bold;
  padding-bottom: var(--h5p-theme-spacing-xxs);
  margin: 0;
}

.h5p-summary .summary-evaluation .joubel-tip-container {
  position: absolute;
  top: 0;
  right: 0;
}
.h5p-summary .summary-evaluation .joubel-tip-icon {
  line-height: 1;
  font-size: var(--h5p-theme-font-size-xl);
}

.h5p-summary .summary-feedback {
  display: inline-block;
  float: right;
}

.summary-evaluation-content .joubel-icon-tip-normal {
  line-height: 0.75em;
}

.h5p-summary .h5p-hidden-read {
  width: 1px;
  height: 1px;
  top: -1px;
  position: absolute;
  text-indent: 1px;
  overflow: hidden;
}

